--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url("../../assets/login.jpg");
+  background: url("../../assets/fondo.jpg");
 }
 
 /*
